--- a/index.html
+++ b/index.html
@@ -31,9 +31,20 @@
 
 <section class="section">
   <h2>Contact</h2>
-  <p>Email: your.email@example.com</p>
-  <p>GitHub: siraj-cyberXpert</p>
+  <p>
+    Email:
+    <a href="mailto:duniyanaraz@gmail.com" style="color:#38bdf8;">
+      duniyanaraz@gmail.com
+    </a>
+  </p>
+  <p>
+    GitHub:
+    <a href="https://github.com/siraj-cyberXpert" target="_blank" style="color:#38bdf8;">
+      siraj-cyberXpert
+    </a>
+  </p>
 </section>
+
 
 <script src="script.js"></script>
 </body>
