--- a/index.html
+++ b/index.html
@@ -16,8 +16,21 @@
 
 <section class="section">
   <h2>About Me</h2>
-  <p>I am a BSIT student (2023–2027) and freelancer focused on modern, animated, and clean web solutions.</p>
+
+  <p>
+  I am <strong>Siraj</strong>, a Bachelor of Science in Information Technology (BSIT) student (2023–2027) with a strong interest in building modern, clean, and user-focused digital solutions. I specialize in creating responsive and animated websites that combine functionality with a professional user experience.
+  </p>
+
+  <p>
+  Alongside my studies, I work as a freelancer, helping clients with web development, technical tasks, and content-related solutions. I believe in clear communication, attention to detail, and delivering reliable work that meets real-world requirements.
+  </p>
+
+  <p>
+  I am continuously learning new technologies and improving my skills to stay aligned with modern industry standards. My goal is to grow as a professional while providing high-quality solutions that add real value to clients and projects.
+  </p>
+
 </section>
+
 
 <section class="section">
   <h2>Skills</h2>
