--- a/index.html
+++ b/index.html
@@ -1,64 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Siraj | Animated Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- GSAP -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
+<!-- 🌙 DARK / LIGHT TOGGLE -->
+<button id="themeToggle" style="
+position:fixed;
+top:20px;
+right:20px;
+padding:10px 14px;
+border-radius:8px;
+border:none;
+cursor:pointer;
+background:#38bdf8;
+color:#000;
+font-weight:bold;
+z-index:999;">
+🌙 Mode
+</button>
+
+<!-- HERO -->
 <section class="hero">
   <h1 class="hero-title">Hi, I'm <span>Siraj</span></h1>
-  <p class="hero-sub">BSIT Student | Freelancer | IT Enthusiast</p>
+  <p class="hero-sub">BSIT Student • Frontend Developer • Freelancer</p>
+  <p class="hero-desc">
+    I design and build modern, animated, and user-focused web experiences with clean code and attention to detail.
+  </p>
 </section>
 
+<!-- ABOUT -->
 <section class="section">
   <h2>About Me</h2>
 
   <p>
-  I am <strong>Siraj</strong>, a Bachelor of Science in Information Technology (BSIT) student (2023–2027) with a strong interest in building modern, clean, and user-focused digital solutions. I specialize in creating responsive and animated websites that combine functionality with a professional user experience.
+    I am <strong>Siraj</strong>, a Bachelor of Science in Information Technology (BSIT) student (2023–2027) with a strong interest in building modern, clean, and user-focused digital solutions.
   </p>
 
   <p>
-  Alongside my studies, I work as a freelancer, helping clients with web development, technical tasks, and content-related solutions. I believe in clear communication, attention to detail, and delivering reliable work that meets real-world requirements.
+    Alongside my studies, I work as a freelancer, helping clients with web development, technical tasks, and content-related solutions. I value clear communication, attention to detail, and reliable delivery.
   </p>
 
   <p>
-  I am continuously learning new technologies and improving my skills to stay aligned with modern industry standards. My goal is to grow as a professional while providing high-quality solutions that add real value to clients and projects.
+    I continuously improve my skills to stay aligned with modern industry standards and deliver meaningful results.
   </p>
-
 </section>
 
-
+<!-- WHAT I DO -->
 <section class="section">
-  <h2>Skills</h2>
+  <h2>What I Do</h2>
+  <p>✔ Modern & responsive website development</p>
+  <p>✔ Clean and animated user interfaces</p>
+  <p>✔ Personal & portfolio websites</p>
+  <p>✔ Technical assistance & digital solutions</p>
+</section>
+
+<!-- SKILLS -->
+<section class="section">
+  <h2>Skills & Technologies</h2>
   <div class="skills">
-    <div>HTML</div>
-    <div>CSS</div>
+    <div>HTML5</div>
+    <div>CSS3</div>
     <div>JavaScript</div>
-    <div>GitHub</div>
+    <div>GSAP Animations</div>
+    <div>Responsive Design</div>
+    <div>Git & GitHub</div>
   </div>
 </section>
 
+<!-- PROJECTS -->
 <section class="section">
-  <h2>Contact</h2>
+  <h2>Projects</h2>
+
+  <div class="projects">
+    <div class="project-card">
+      <h3>Animated Portfolio Website</h3>
+      <p>
+        A modern personal portfolio built using HTML, CSS, JavaScript, and GSAP with smooth animations and responsive design.
+      </p>
+    </div>
+
+    <div class="project-card">
+      <h3>Business Landing Page</h3>
+      <p>
+        A clean and professional landing page focused on layout, typography, and user experience.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- FIND ME -->
+<section class="section">
+  <h2>Find Me Online</h2>
   <p>
-    Email:
-    <a href="mailto:duniyanaraz@gmail.com" style="color:#38bdf8;">
-      duniyanaraz@gmail.com
-    </a>
+    🔗 GitHub:
+    <a href="https://github.com/siraj-cyberXpert" target="_blank">siraj-cyberXpert</a>
   </p>
   <p>
-    GitHub:
-    <a href="https://github.com/siraj-cyberXpert" target="_blank" style="color:#38bdf8;">
-      siraj-cyberXpert
-    </a>
+    🧑‍💻 Fiverr:
+    <a href="https://www.fiverr.com/" target="_blank">Hire me on Fiverr</a>
   </p>
 </section>
 
+<!-- CONTACT -->
+<section class="section">
+  <h2>Contact</h2>
+  <p>
+    📧 Email:
+    <a href="mailto:duniyanaraz@gmail.com">duniyanaraz@gmail.com</a>
+  </p>
+</section>
 
+<!-- JS -->
 <script src="script.js"></script>
+
 </body>
 </html>
