--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<!-- 🌙 DARK / LIGHT TOGGLE -->
+<!-- 🌙 DARK / LIGHT MODE TOGGLE -->
 <button id="themeToggle" style="
 position:fixed;
 top:20px;
@@ -28,7 +28,7 @@ background:#38bdf8;
 color:#000;
 font-weight:bold;
 z-index:999;">
-🌙 Mode
+🌙 Dark
 </button>
 
 <!-- HERO -->
@@ -45,25 +45,26 @@ z-index:999;">
   <h2>About Me</h2>
 
   <p>
-    I am <strong>Siraj</strong>, a Bachelor of Science in Information Technology (BSIT) student (2023–2027) with a strong interest in building modern, clean, and user-focused digital solutions.
+    I am <strong>Siraj</strong>, a Bachelor of Science in Information Technology (BSIT) student (2023–2027) with a strong interest in web development and modern UI design.
   </p>
 
   <p>
-    Alongside my studies, I work as a freelancer, helping clients with web development, technical tasks, and content-related solutions. I value clear communication, attention to detail, and reliable delivery.
+    Alongside my studies, I work as a freelancer on Fiverr, helping clients with web development and digital solutions.
   </p>
 
   <p>
-    I continuously improve my skills to stay aligned with modern industry standards and deliver meaningful results.
+    I focus on clean code, smooth animations, and professional user experiences.
   </p>
 </section>
 
-<!-- WHAT I DO -->
-<section class="section">
+<!-- WHAT I DO (ANIMATED) -->
+<section class="section what-i-do">
   <h2>What I Do</h2>
-  <p>✔ Modern & responsive website development</p>
-  <p>✔ Clean and animated user interfaces</p>
-  <p>✔ Personal & portfolio websites</p>
-  <p>✔ Technical assistance & digital solutions</p>
+
+  <p class="do-item">✔ Modern & responsive website development</p>
+  <p class="do-item">✔ Clean and animated user interfaces</p>
+  <p class="do-item">✔ Personal & portfolio websites</p>
+  <p class="do-item">✔ Technical assistance & digital solutions</p>
 </section>
 
 <!-- SKILLS -->
